TP_INTEGRADOR/obj/main.output
Terminals unused in grammar

    COMENTARIO_UNA_LINEA
    COMENTARIO_MULTI_LINEA
    ESPACIO_EN_BLANCO_O_TABULACION
    DEFINE
    INCLUDE
    BARRA_INVERTIDA


State 8 conflicts: 2 reduce/reduce
State 45 conflicts: 2 reduce/reduce
State 123 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 133 conflicts: 3 reduce/reduce
State 213 conflicts: 2 shift/reduce
State 334 conflicts: 1 shift/reduce


Grammar

    0 $accept: unidad_de_programa $end

    1 unidad_de_programa: %empty
    2                   | unidad_de_programa unidad_de_traduccion
    3                   | error unidad_de_traduccion

    4 unidad_de_traduccion: declaracion_externa
    5                     | sentencia

    6 declaracion_externa: definicion_de_funcion
    7                    | declaracion

    8 definicion_de_funcion: especificadores_de_declaracion declarador lista_de_declaracion sentencia_compuesta
    9                      | declarador lista_de_declaracion sentencia_compuesta
   10                      | especificadores_de_declaracion declarador sentencia_compuesta
   11                      | declarador sentencia_compuesta

   12 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   13            | especificadores_de_declaracion ';'

   14 lista_de_declaracion: declaracion
   15                     | lista_de_declaracion declaracion

   16 especificadores_de_declaracion: especificador_categoria_almacenamiento especificadores_de_declaracion
   17                               | especificador_categoria_almacenamiento
   18                               | especificador_de_tipo especificadores_de_declaracion
   19                               | especificador_de_tipo
   20                               | calificador_de_tipo especificadores_de_declaracion
   21                               | calificador_de_tipo

   22 especificador_categoria_almacenamiento: AUTO
   23                                       | REGISTER
   24                                       | STATIC
   25                                       | EXTERN
   26                                       | TYPEDEF

   27 especificador_de_tipo: INT
   28                      | CHAR
   29                      | FLOAT
   30                      | DOUBLE
   31                      | SHORT
   32                      | VOID
   33                      | LONG
   34                      | SIGNED
   35                      | UNSIGNED
   36                      | especificador_estructura_o_union
   37                      | especificador_enum
   38                      | nombre_typedef

   39 calificador_de_tipo: CONST
   40                    | VOLATILE

   41 especificador_estructura_o_union: estructura_o_union IDENTIFICADOR '{' lista_declaraciones_struct '}'
   42                                 | estructura_o_union '{' lista_declaraciones_struct '}'
   43                                 | estructura_o_union IDENTIFICADOR

   44 estructura_o_union: STRUCT
   45                   | UNION

   46 lista_declaraciones_struct: declaracion_struct
   47                           | lista_declaraciones_struct declaracion_struct

   48 lista_declaradores_init: declarador_init
   49                        | lista_declaradores_init ',' declarador_init

   50 declarador_init: declarador
   51                | declarador '=' inicializador

   52 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'

   53 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   54                                | especificador_de_tipo
   55                                | calificador_de_tipo lista_calificador_especificador
   56                                | calificador_de_tipo

   57 lista_declaradores_struct: declarador_struct
   58                          | lista_declaradores_struct ',' declarador_struct

   59 declarador_struct: declarador
   60                  | declarador ':' expresion_constante
   61                  | ':' expresion_constante

   62 especificador_enum: ENUM IDENTIFICADOR '{' lista_de_enumerador '}'
   63                   | ENUM '{' lista_de_enumerador '}'
   64                   | ENUM IDENTIFICADOR

   65 lista_de_enumerador: enumerador
   66                    | lista_de_enumerador ',' enumerador

   67 enumerador: IDENTIFICADOR
   68           | IDENTIFICADOR '=' expresion_constante

   69 declarador: apuntador declarador_directo
   70           | declarador_directo

   71 declarador_directo: IDENTIFICADOR
   72                   | '(' declarador ')'
   73                   | declarador_directo '[' expresion_constante ']'
   74                   | declarador_directo '[' ']'
   75                   | declarador_directo '(' lista_tipos_de_parametro ')'
   76                   | declarador_directo '(' lista_de_identificadores ')'
   77                   | declarador_directo '(' ')'

   78 apuntador: '*' lista_calificadores_de_tipo
   79          | '*' apuntador lista_calificadores_de_tipo
   80          | '*' apuntador
   81          | '*'

   82 lista_calificadores_de_tipo: calificador_de_tipo
   83                            | lista_calificadores_de_tipo calificador_de_tipo

   84 lista_tipos_de_parametro: lista_de_parametros
   85                         | lista_de_parametros ',' ELIPSIS

   86 lista_de_parametros: declaracion_de_parametro
   87                    | lista_de_parametros ',' declaracion_de_parametro

   88 declaracion_de_parametro: especificadores_de_declaracion declarador
   89                         | especificadores_de_declaracion declarador_abstracto
   90                         | especificadores_de_declaracion

   91 lista_de_identificadores: IDENTIFICADOR
   92                         | lista_de_identificadores ',' IDENTIFICADOR

   93 inicializador: expresion_de_asignacion
   94              | '{' lista_de_inicializadores '}'
   95              | '{' lista_de_inicializadores ',' '}'

   96 lista_de_inicializadores: inicializador
   97                         | lista_de_inicializadores ',' inicializador

   98 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
   99               | lista_calificador_especificador

  100 declarador_abstracto: apuntador
  101                     | apuntador declarador_abstracto_directo
  102                     | declarador_abstracto_directo

  103 declarador_abstracto_directo: '(' declarador_abstracto ')'
  104                             | declarador_abstracto_directo '[' expresion_constante ']'
  105                             | '[' expresion_constante ']'
  106                             | declarador_abstracto_directo '[' ']'
  107                             | '[' ']'
  108                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
  109                             | '(' lista_tipos_de_parametro ')'
  110                             | declarador_abstracto_directo '(' ')'
  111                             | '(' ')'

  112 nombre_typedef: 't'

  113 sentencia: sentencia_etiquetada
  114          | sentencia_expresion
  115          | sentencia_compuesta
  116          | sentencia_de_seleccion
  117          | sentencia_de_iteracion
  118          | sentencia_de_salto

  119 sentencia_etiquetada: IDENTIFICADOR ':' sentencia
  120                     | CASE expresion_constante ':' sentencia
  121                     | DEFAULT ':' sentencia

  122 sentencia_expresion: expresion ';'
  123                    | ';'

  124 sentencia_compuesta: '{' lista_de_declaracion lista_de_sentencias '}'
  125                    | '{' lista_de_sentencias '}'
  126                    | '{' lista_de_declaracion '}'
  127                    | '{' '}'

  128 lista_de_sentencias: sentencia
  129                    | lista_de_sentencias sentencia

  130 sentencia_de_seleccion: IF '(' expresion ')' sentencia
  131                       | IF '(' expresion ')' sentencia ELSE sentencia
  132                       | SWITCH '(' expresion ')' sentencia

  133 sentencia_de_iteracion: WHILE '(' expresion ')' sentencia
  134                       | DO sentencia WHILE '(' expresion ')' ';'
  135                       | FOR '(' expresion ';' expresion ';' expresion ')' sentencia
  136                       | FOR '(' expresion ';' expresion ';' ')' sentencia
  137                       | FOR '(' expresion ';' ';' expresion ')' sentencia
  138                       | FOR '(' expresion ';' ';' ')' sentencia
  139                       | FOR '(' ';' expresion ';' expresion ')' sentencia
  140                       | FOR '(' ';' expresion ';' ')' sentencia
  141                       | FOR '(' ';' ';' expresion ')' sentencia
  142                       | FOR '(' ';' ';' ')' sentencia

  143 sentencia_de_salto: GOTO IDENTIFICADOR ';'
  144                   | CONTINUE ';'
  145                   | BREAK ';'
  146                   | RETURN expresion ';'
  147                   | RETURN ';'

  148 expresion: expresion_de_asignacion
  149          | expresion ',' expresion_de_asignacion

  150 expresion_de_asignacion: expresion_condicional
  151                        | expresion_unaria operador_de_asignacion expresion_de_asignacion

  152 operador_de_asignacion: POR_IGUAL
  153                       | DIVISION_IGUAL
  154                       | MAS_IGUAL
  155                       | MENOS_IGUAL
  156                       | MODULO_IGUAL
  157                       | CORRIMIENTO_A_IZQUIERDA_IGUAL
  158                       | CORRIMIENTO_A_DERECHA_IGUAL
  159                       | AND_IGUAL
  160                       | OR_IGUAL
  161                       | OR_EXCLUSIVO_IGUAL
  162                       | '='

  163 expresion_condicional: expresion_logica_or
  164                      | expresion_logica_or '?' expresion ':' expresion_condicional

  165 expresion_constante: expresion_condicional

  166 expresion_logica_or: expresion_logica_and
  167                    | expresion_logica_or OR_LOGICO expresion_logica_and

  168 expresion_logica_and: expresion_or_inclusivo
  169                     | expresion_logica_and AND_LOGICO expresion_or_inclusivo

  170 expresion_or_inclusivo: expresion_or_exclusivo
  171                       | expresion_or_inclusivo '|' expresion_or_exclusivo

  172 expresion_or_exclusivo: expresion_and
  173                       | expresion_or_exclusivo '^' expresion_and

  174 expresion_and: expresion_de_igualdad
  175              | expresion_and '&' expresion_de_igualdad

  176 expresion_de_igualdad: expresion_relacional
  177                      | expresion_de_igualdad IGUAL_IGUAL expresion_relacional
  178                      | expresion_de_igualdad DISTINTO expresion_relacional

  179 expresion_relacional: expresion_de_corrimiento
  180                     | expresion_relacional '<' expresion_de_corrimiento
  181                     | expresion_relacional '>' expresion_de_corrimiento
  182                     | expresion_relacional MENOR_IGUAL expresion_de_corrimiento
  183                     | expresion_relacional MAYOR_IGUAL expresion_de_corrimiento

  184 expresion_de_corrimiento: expresion_aditiva
  185                         | expresion_de_corrimiento CORRIMIENTO_A_IZQUIERDA expresion_aditiva
  186                         | expresion_de_corrimiento CORRIMIENTO_A_DERECHA expresion_aditiva

  187 expresion_aditiva: expresion_multiplicativa
  188                  | expresion_aditiva '+' expresion_multiplicativa
  189                  | expresion_aditiva '-' expresion_multiplicativa

  190 expresion_multiplicativa: expresion_cast
  191                         | expresion_multiplicativa '*' expresion_cast
  192                         | expresion_multiplicativa '/' expresion_cast
  193                         | expresion_multiplicativa '%' expresion_cast

  194 expresion_cast: expresion_unaria
  195               | '(' nombre_de_tipo ')' expresion_cast

  196 expresion_unaria: expresion_posfija
  197                 | MENOS_MENOS expresion_unaria
  198                 | MAS_MAS expresion_unaria
  199                 | operador_unario expresion_cast
  200                 | SIZEOF expresion_unaria
  201                 | SIZEOF '(' nombre_de_tipo ')'

  202 operador_unario: '&'
  203                | '*'
  204                | '+'
  205                | '-'
  206                | '~'
  207                | '!'

  208 expresion_posfija: expresion_primaria
  209                  | expresion_posfija '[' expresion ']'
  210                  | expresion_posfija '(' lista_expresiones_argumento ')'
  211                  | expresion_posfija '(' ')'
  212                  | expresion_posfija '.' IDENTIFICADOR
  213                  | expresion_posfija PUNTERO_FLECHA IDENTIFICADOR
  214                  | expresion_posfija MENOS_MENOS
  215                  | expresion_posfija MAS_MAS

  216 expresion_primaria: IDENTIFICADOR
  217                   | constante
  218                   | LITERAL_CADENA
  219                   | '(' expresion ')'

  220 lista_expresiones_argumento: expresion_de_asignacion
  221                            | lista_expresiones_argumento ',' expresion_de_asignacion

  222 constante: CONSTANTE_OCTAL
  223          | CONSTANTE_HEXADECIMAL
  224          | CONSTANTE_DECIMAL
  225          | CONSTANTE_CARACTER
  226          | CONSTANTE_REAL
  227          | ENUM


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 207
    '%' (37) 193
    '&' (38) 175 202
    '(' (40) 72 75 76 77 103 108 109 110 111 130 131 132 133 134 135 136 137 138 139 140 141 142 195 201 210 211 219
    ')' (41) 72 75 76 77 103 108 109 110 111 130 131 132 133 134 135 136 137 138 139 140 141 142 195 201 210 211 219
    '*' (42) 78 79 80 81 191 203
    '+' (43) 188 204
    ',' (44) 49 58 66 85 87 92 95 97 149 221
    '-' (45) 189 205
    '.' (46) 212
    '/' (47) 192
    ':' (58) 60 61 119 120 121 164
    ';' (59) 12 13 52 122 123 134 135 136 137 138 139 140 141 142 143 144 145 146 147
    '<' (60) 180
    '=' (61) 51 68 162
    '>' (62) 181
    '?' (63) 164
    '[' (91) 73 74 104 105 106 107 209
    ']' (93) 73 74 104 105 106 107 209
    '^' (94) 173
    't' (116) 112
    '{' (123) 41 42 62 63 94 95 124 125 126 127
    '|' (124) 171
    '}' (125) 41 42 62 63 94 95 124 125 126 127
    '~' (126) 206
    error (256) 3
    CONSTANTE_REAL <dval> (258) 226
    CONSTANTE_DECIMAL <ival> (259) 224
    CONSTANTE_OCTAL <ival> (260) 222
    CONSTANTE_HEXADECIMAL <ival> (261) 223
    CONSTANTE_CARACTER <cval> (262) 225
    IDENTIFICADOR <cval> (263) 41 43 62 64 67 68 71 91 92 119 143 212 213 216
    LITERAL_CADENA <cval> (264) 218
    COMENTARIO_UNA_LINEA <cval> (265)
    COMENTARIO_MULTI_LINEA <cval> (266)
    ESPACIO_EN_BLANCO_O_TABULACION <cval> (267)
    AUTO (268) 22
    BREAK (269) 145
    CASE (270) 120
    CHAR (271) 28
    CONST (272) 39
    CONTINUE (273) 144
    DEFAULT (274) 121
    DEFINE (275)
    DO (276) 134
    DOUBLE (277) 30
    ELSE (278) 131
    ENUM (279) 62 63 64 227
    EXTERN (280) 25
    FLOAT (281) 29
    FOR (282) 135 136 137 138 139 140 141 142
    GOTO (283) 143
    IF (284) 130 131
    INT (285) 27
    INCLUDE (286)
    LONG (287) 33
    REGISTER (288) 23
    RETURN (289) 146 147
    SHORT (290) 31
    SIGNED (291) 34
    SIZEOF (292) 200 201
    STATIC (293) 24
    STRUCT (294) 44
    SWITCH (295) 132
    TYPEDEF (296) 26
    UNION (297) 45
    UNSIGNED (298) 35
    VOID (299) 32
    VOLATILE (300) 40
    WHILE (301) 133 134
    IGUAL_IGUAL (302) 177
    DISTINTO (303) 178
    MENOR_IGUAL (304) 182
    MAYOR_IGUAL (305) 183
    MAS_MAS (306) 198 215
    MENOS_MENOS (307) 197 214
    MAS_IGUAL (308) 154
    MENOS_IGUAL (309) 155
    POR_IGUAL (310) 152
    DIVISION_IGUAL (311) 153
    MODULO_IGUAL (312) 156
    AND_IGUAL (313) 159
    OR_IGUAL (314) 160
    OR_EXCLUSIVO_IGUAL (315) 161
    AND_LOGICO (316) 169
    OR_LOGICO (317) 167
    ELIPSIS (318) 85
    CORRIMIENTO_A_IZQUIERDA (319) 185
    CORRIMIENTO_A_DERECHA (320) 186
    CORRIMIENTO_A_IZQUIERDA_IGUAL (321) 157
    CORRIMIENTO_A_DERECHA_IGUAL (322) 158
    BARRA_INVERTIDA (323)
    PUNTERO_FLECHA (324) 213


Nonterminals, with rules where they appear

    $accept (95)
        on left: 0
    unidad_de_programa (96)
        on left: 1 2 3
        on right: 0 2
    unidad_de_traduccion (97)
        on left: 4 5
        on right: 2 3
    declaracion_externa (98)
        on left: 6 7
        on right: 4
    definicion_de_funcion (99)
        on left: 8 9 10 11
        on right: 6
    declaracion (100)
        on left: 12 13
        on right: 7 14 15
    lista_de_declaracion (101)
        on left: 14 15
        on right: 8 9 15 124 126
    especificadores_de_declaracion (102)
        on left: 16 17 18 19 20 21
        on right: 8 10 12 13 16 18 20 88 89 90
    especificador_categoria_almacenamiento (103)
        on left: 22 23 24 25 26
        on right: 16 17
    especificador_de_tipo (104)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38
        on right: 18 19 53 54
    calificador_de_tipo (105)
        on left: 39 40
        on right: 20 21 55 56 82 83
    especificador_estructura_o_union (106)
        on left: 41 42 43
        on right: 36
    estructura_o_union (107)
        on left: 44 45
        on right: 41 42 43
    lista_declaraciones_struct (108)
        on left: 46 47
        on right: 41 42 47
    lista_declaradores_init (109)
        on left: 48 49
        on right: 12 49
    declarador_init (110)
        on left: 50 51
        on right: 48 49
    declaracion_struct (111)
        on left: 52
        on right: 46 47
    lista_calificador_especificador (112)
        on left: 53 54 55 56
        on right: 52 53 55 98 99
    lista_declaradores_struct (113)
        on left: 57 58
        on right: 52 58
    declarador_struct (114)
        on left: 59 60 61
        on right: 57 58
    especificador_enum (115)
        on left: 62 63 64
        on right: 37
    lista_de_enumerador (116)
        on left: 65 66
        on right: 62 63 66
    enumerador (117)
        on left: 67 68
        on right: 65 66
    declarador (118)
        on left: 69 70
        on right: 8 9 10 11 50 51 59 60 72 88
    declarador_directo (119)
        on left: 71 72 73 74 75 76 77
        on right: 69 70 73 74 75 76 77
    apuntador (120)
        on left: 78 79 80 81
        on right: 69 79 80 100 101
    lista_calificadores_de_tipo (121)
        on left: 82 83
        on right: 78 79 83
    lista_tipos_de_parametro (122)
        on left: 84 85
        on right: 75 108 109
    lista_de_parametros (123)
        on left: 86 87
        on right: 84 85 87
    declaracion_de_parametro (124)
        on left: 88 89 90
        on right: 86 87
    lista_de_identificadores (125)
        on left: 91 92
        on right: 76 92
    inicializador (126)
        on left: 93 94 95
        on right: 51 96 97
    lista_de_inicializadores (127)
        on left: 96 97
        on right: 94 95 97
    nombre_de_tipo (128)
        on left: 98 99
        on right: 195 201
    declarador_abstracto (129)
        on left: 100 101 102
        on right: 89 98 103
    declarador_abstracto_directo (130)
        on left: 103 104 105 106 107 108 109 110 111
        on right: 101 102 104 106 108 110
    nombre_typedef (131)
        on left: 112
        on right: 38
    sentencia (132)
        on left: 113 114 115 116 117 118
        on right: 5 119 120 121 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142
    sentencia_etiquetada (133)
        on left: 119 120 121
        on right: 113
    sentencia_expresion (134)
        on left: 122 123
        on right: 114
    sentencia_compuesta (135)
        on left: 124 125 126 127
        on right: 8 9 10 11 115
    lista_de_sentencias (136)
        on left: 128 129
        on right: 124 125 129
    sentencia_de_seleccion (137)
        on left: 130 131 132
        on right: 116
    sentencia_de_iteracion (138)
        on left: 133 134 135 136 137 138 139 140 141 142
        on right: 117
    sentencia_de_salto (139)
        on left: 143 144 145 146 147
        on right: 118
    expresion (140)
        on left: 148 149
        on right: 122 130 131 132 133 134 135 136 137 138 139 140 141 146 149 164 209 219
    expresion_de_asignacion (141)
        on left: 150 151
        on right: 93 148 149 151 220 221
    operador_de_asignacion (142)
        on left: 152 153 154 155 156 157 158 159 160 161 162
        on right: 151
    expresion_condicional (143)
        on left: 163 164
        on right: 150 164 165
    expresion_constante (144)
        on left: 165
        on right: 60 61 68 73 104 105 120
    expresion_logica_or (145)
        on left: 166 167
        on right: 163 164 167
    expresion_logica_and (146)
        on left: 168 169
        on right: 166 167 169
    expresion_or_inclusivo (147)
        on left: 170 171
        on right: 168 169 171
    expresion_or_exclusivo (148)
        on left: 172 173
        on right: 170 171 173
    expresion_and (149)
        on left: 174 175
        on right: 172 173 175
    expresion_de_igualdad (150)
        on left: 176 177 178
        on right: 174 175 177 178
    expresion_relacional (151)
        on left: 179 180 181 182 183
        on right: 176 177 178 180 181 182 183
    expresion_de_corrimiento (152)
        on left: 184 185 186
        on right: 179 180 181 182 183 185 186
    expresion_aditiva (153)
        on left: 187 188 189
        on right: 184 185 186 188 189
    expresion_multiplicativa (154)
        on left: 190 191 192 193
        on right: 187 188 189 191 192 193
    expresion_cast (155)
        on left: 194 195
        on right: 190 191 192 193 195 199
    expresion_unaria (156)
        on left: 196 197 198 199 200 201
        on right: 151 194 197 198 200
    operador_unario (157)
        on left: 202 203 204 205 206 207
        on right: 199
    expresion_posfija (158)
        on left: 208 209 210 211 212 213 214 215
        on right: 196 209 210 211 212 213 214 215
    expresion_primaria (159)
        on left: 216 217 218 219
        on right: 208
    lista_expresiones_argumento (160)
        on left: 220 221
        on right: 210 221
    constante (161)
        on left: 222 223 224 225 226 227
        on right: 217


State 0

    0 $accept: . unidad_de_programa $end

    error  shift, and go to state 1

    $end                   reduce using rule 1 (unidad_de_programa)
    CONSTANTE_REAL         reduce using rule 1 (unidad_de_programa)
    CONSTANTE_DECIMAL      reduce using rule 1 (unidad_de_programa)
    CONSTANTE_OCTAL        reduce using rule 1 (unidad_de_programa)
    CONSTANTE_HEXADECIMAL  reduce using rule 1 (unidad_de_programa)
    CONSTANTE_CARACTER     reduce using rule 1 (unidad_de_programa)
    IDENTIFICADOR          reduce using rule 1 (unidad_de_programa)
    LITERAL_CADENA         reduce using rule 1 (unidad_de_programa)
    AUTO                   reduce using rule 1 (unidad_de_programa)
    BREAK                  reduce using rule 1 (unidad_de_programa)
    CASE                   reduce using rule 1 (unidad_de_programa)
    CHAR                   reduce using rule 1 (unidad_de_programa)
    CONST                  reduce using rule 1 (unidad_de_programa)
    CONTINUE               reduce using rule 1 (unidad_de_programa)
    DEFAULT                reduce using rule 1 (unidad_de_programa)
    DO                     reduce using rule 1 (unidad_de_programa)
    DOUBLE                 reduce using rule 1 (unidad_de_programa)
    ENUM                   reduce using rule 1 (unidad_de_programa)
    EXTERN                 reduce using rule 1 (unidad_de_programa)
    FLOAT                  reduce using rule 1 (unidad_de_programa)
    FOR                    reduce using rule 1 (unidad_de_programa)
    GOTO                   reduce using rule 1 (unidad_de_programa)
    IF                     reduce using rule 1 (unidad_de_programa)
    INT                    reduce using rule 1 (unidad_de_programa)
    LONG                   reduce using rule 1 (unidad_de_programa)
    REGISTER               reduce using rule 1 (unidad_de_programa)
    RETURN                 reduce using rule 1 (unidad_de_programa)
    SHORT                  reduce using rule 1 (unidad_de_programa)
    SIGNED                 reduce using rule 1 (unidad_de_programa)
    SIZEOF                 reduce using rule 1 (unidad_de_programa)
    STATIC                 reduce using rule 1 (unidad_de_programa)
    STRUCT                 reduce using rule 1 (unidad_de_programa)
    SWITCH                 reduce using rule 1 (unidad_de_programa)
    TYPEDEF                reduce using rule 1 (unidad_de_programa)
    UNION                  reduce using rule 1 (unidad_de_programa)
    UNSIGNED               reduce using rule 1 (unidad_de_programa)
    VOID                   reduce using rule 1 (unidad_de_programa)
    VOLATILE               reduce using rule 1 (unidad_de_programa)
    WHILE                  reduce using rule 1 (unidad_de_programa)
    MAS_MAS                reduce using rule 1 (unidad_de_programa)
    MENOS_MENOS            reduce using rule 1 (unidad_de_programa)
    '+'                    reduce using rule 1 (unidad_de_programa)
    '-'                    reduce using rule 1 (unidad_de_programa)
    '*'                    reduce using rule 1 (unidad_de_programa)
    ';'                    reduce using rule 1 (unidad_de_programa)
    '{'                    reduce using rule 1 (unidad_de_programa)
    '('                    reduce using rule 1 (unidad_de_programa)
    't'                    reduce using rule 1 (unidad_de_programa)
    '&'                    reduce using rule 1 (unidad_de_programa)
    '~'                    reduce using rule 1 (unidad_de_programa)
    '!'                    reduce using rule 1 (unidad_de_programa)

    unidad_de_programa  go to state 2


State 1

    3 unidad_de_programa: error . unidad_de_traduccion

    CONSTANTE_REAL         shift, and go to state 3
    CONSTANTE_DECIMAL      shift, and go to state 4
    CONSTANTE_OCTAL        shift, and go to state 5
    CONSTANTE_HEXADECIMAL  shift, and go to state 6
    CONSTANTE_CARACTER     shift, and go to state 7
    IDENTIFICADOR          shift, and go to state 8
    LITERAL_CADENA         shift, and go to state 9
    AUTO                   shift, and go to state 10
    BREAK                  shift, and go to state 11
    CASE                   shift, and go to state 12
    CHAR                   shift, and go to state 13
    CONST                  shift, and go to state 14
    CONTINUE               shift, and go to state 15
    DEFAULT                shift, and go to state 16
    DO                     shift, and go to state 17
    DOUBLE                 shift, and go to state 18
    ENUM                   shift, and go to state 19
    EXTERN                 shift, and go to state 20
    FLOAT                  shift, and go to state 21
    FOR                    shift, and go to state 22
    GOTO                   shift, and go to state 23
    IF                     shift, and go to state 24
    INT                    shift, and go to state 25
    LONG                   shift, and go to state 26
    REGISTER               shift, and go to state 27
    RETURN                 shift, and go to state 28
    SHORT                  shift, and go to state 29
    SIGNED                 shift, and go to state 30
    SIZEOF                 shift, and go to state 31
    STATIC                 shift, and go to state 32
    STRUCT                 shift, and go to state 33
    SWITCH                 shift, and go to state 34
    TYPEDEF                shift, and go to state 35
    UNION                  shift, and go to state 36
    UNSIGNED               shift, and go to state 37
    VOID                   shift, and go to state 38
    VOLATILE               shift, and go to state 39
    WHILE                  shift, and go to state 40
    MAS_MAS                shift, and go to state 41
    MENOS_MENOS            shift, and go to state 42
    '+'                    shift, and go to state 43
    '-'                    shift, and go to state 44
    '*'                    shift, and go to state 45
    ';'                    shift, and go to state 46
    '{'                    shift, and go to state 47
    '('                    shift, and go to state 48
    't'                    shift, and go to state 49
    '&'                    shift, and go to state 50
    '~'                    shift, and go to state 51
    '!'                    shift, and go to state 52

    unidad_de_traduccion                    go to state 53
    declaracion_externa                     go to state 54
    definicion_de_funcion                   go to state 55
    declaracion                             go to state 56
    especificadores_de_declaracion          go to state 57
    especificador_categoria_almacenamiento  go to state 58
    especificador_de_tipo                   go to state 59
    calificador_de_tipo                     go to state 60
    especificador_estructura_o_union        go to state 61
    estructura_o_union                      go to state 62
    especificador_enum                      go to state 63
    declarador                              go to state 64
    declarador_directo                      go to state 65
    apuntador                               go to state 66
    nombre_typedef                          go to state 67
    sentencia                               go to state 68
    sentencia_etiquetada                    go to state 69
    sentencia_expresion                     go to state 70
    sentencia_compuesta                     go to state 71
    sentencia_de_seleccion                  go to state 72
    sentencia_de_iteracion                  go to state 73
    sentencia_de_salto                      go to state 74
    expresion                               go to state 75
    expresion_de_asignacion                 go to state 76
    expresion_condicional                   go to state 77
    expresion_logica_or                     go to state 78
    expresion_logica_and                    go to state 79
    expresion_or_inclusivo                  go to state 80
    expresion_or_exclusivo                  go to state 81
    expresion_and                           go to state 82
    expresion_de_igualdad                   go to state 83
    expresion_relacional                    go to state 84
    expresion_de_corrimiento                go to state 85
    expresion_aditiva                       go to state 86
    expresion_multiplicativa                go to state 87
    expresion_cast                          go to state 88
    expresion_unaria                        go to state 89
    operador_unario                         go to state 90
    expresion_posfija                       go to state 91
    expresion_primaria                      go to state 92
    constante                               go to state 93


State 2

    0 $accept: unidad_de_programa . $end
    2 unidad_de_programa: unidad_de_programa . unidad_de_traduccion

    $end                   shift, and go to state 94
    CONSTANTE_REAL         shift, and go to state 3
    CONSTANTE_DECIMAL      shift, and go to state 4
    CONSTANTE_OCTAL        shift, and go to state 5
    CONSTANTE_HEXADECIMAL  shift, and go to state 6
    CONSTANTE_CARACTER     shift, and go to state 7
    IDENTIFICADOR          shift, and go to state 8
    LITERAL_CADENA         shift, and go to state 9
    AUTO                   shift, and go to state 10
    BREAK                  shift, and go to state 11
    CASE                   shift, and go to state 12
    CHAR                   shift, and go to state 13
    CONST                  shift, and go to state 14
    CONTINUE               shift, and go to state 15
    DEFAULT                shift, and go to state 16
    DO                     shift, and go to state 17
    DOUBLE                 shift, and go to state 18
    ENUM                   shift, and go to state 19
    EXTERN                 shift, and go to state 20
    FLOAT                  shift, and go to state 21
    FOR                    shift, and go to state 22
    GOTO                   shift, and go to state 23
    IF                     shift, and go to state 24
    INT                    shift, and go to state 25
    LONG                   shift, and go to state 26
    REGISTER               shift, and go to state 27
    RETURN                 shift, and go to state 28
    SHORT                  shift, and go to state 29
    SIGNED                 shift, and go to state 30
    SIZEOF                 shift, and go to state 31
    STATIC                 shift, and go to state 32
    STRUCT                 shift, and go to state 33
    SWITCH                 shift, and go to state 34
    TYPEDEF                shift, and go to state 35
    UNION                  shift, and go to state 36
    UNSIGNED               shift, and go to state 37
    VOID                   shift, and go to state 38
    VOLATILE               shift, and go to state 39
    WHILE                  shift, and go to state 40
    MAS_MAS                shift, and go to state 41
    MENOS_MENOS            shift, and go to state 42
    '+'                    shift, and go to state 43
    '-'                    shift, and go to state 44
    '*'                    shift, and go to state 45
    ';'                    shift, and go to state 46
    '{'                    shift, and go to state 47
    '('                    shift, and go to state 48
    't'                    shift, and go to state 49
    '&'                    shift, and go to state 50
    '~'                    shift, and go to state 51
    '!'                    shift, and go to state 52

    unidad_de_traduccion                    go to state 95
    declaracion_externa                     go to state 54
    definicion_de_funcion                   go to state 55
    declaracion                             go to state 56
    especificadores_de_declaracion          go to state 57
    especificador_categoria_almacenamiento  go to state 58
    especificador_de_tipo                   go to state 59
    calificador_de_tipo                     go to state 60
    especificador_estructura_o_union        go to state 61
    estructura_o_union                      go to state 62
    especificador_enum                      go to state 63
    declarador                              go to state 64
    declarador_directo                      go to state 65
    apuntador                               go to state 66
    nombre_typedef                          go to state 67
    sentencia                               go to state 68
    sentencia_etiquetada                    go to state 69
    sentencia_expresion                     go to state 70
    sentencia_compuesta                     go to state 71
    sentencia_de_seleccion                  go to state 72
    sentencia_de_iteracion                  go to state 73
    sentencia_de_salto                      go to state 74
    expresion                               go to state 75
    expresion_de_asignacion                 go to state 76
    expresion_condicional                   go to state 77
    expresion_logica_or                     go to state 78
    expresion_logica_and                    go to state 79
    expresion_or_inclusivo                  go to state 80
    expresion_or_exclusivo                  go to state 81
    expresion_and                           go to state 82
    expresion_de_igualdad                   go to state 83
    expresion_relacional                    go to state 84
    expresion_de_corrimiento                go to state 85
    expresion_aditiva                       go to state 86
    expresion_multiplicativa                go to state 87
    expresion_cast                          go to state 88
    expresion_unaria                        go to state 89
    operador_unario                         go to state 90
    expresion_posfija                       go to state 91
    expresion_primaria                      go to state 92
    constante                               go to state 93


State 3

  226 constante: CONSTANTE_REAL .

    $default  reduce using rule 226 (constante)


State 4

  224 constante: CONSTANTE_DECIMAL .

    $default  reduce using rule 224 (constante)


State 5

  222 constante: CONSTANTE_OCTAL .

    $default  reduce using rule 222 (constante)


State 6

  223 constante: CONSTANTE_HEXADECIMAL .

    $default  reduce using rule 223 (constante)


State 7

  225 constante: CONSTANTE_CARACTER .

    $default  reduce using rule 225 (constante)


State 8

   71 declarador_directo: IDENTIFICADOR .
  119 sentencia_etiquetada: IDENTIFICADOR . ':' sentencia
  216 expresion_primaria: IDENTIFICADOR .

    ':'  shift, and go to state 96
